# censorbot

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  INTEGRATION_PLAN.md  MANIFEST.in  README.md  RELEASE.md  TESTING.md  badwords.txt  censor.py  project.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_censor.py
.github/workflows/: ci.yml  release.yml
